# c-todo

./: .gitignore  CMakeLists.txt  README.md  c-todo  cmd.c  cmd.h  main.c  todo_list.c  todo_list.h
subcommands/: add.c  add.h  list.c  list.h  toggle.c  toggle.h
